Terra Slider: Fix wrapping issue for min/max labels

--- a/packages/terra-slider/src/Slider.module.scss
+++ b/packages/terra-slider/src/Slider.module.scss
@@ -25,7 +25,7 @@
     font-size: var(--terra-slider-sub-label-font-size, 0.857rem);
     font-weight: var(--terra-slider-sub-label-font-weight, 400);
     text-align: left;
-    white-space: initial;
+    white-space: nowrap;
   }
 
   .slider-min-label {
